--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,31 @@
-.App {
-  text-align: center;
+#root {
+  color: #272F66;
+  font-family: 'Roboto';
+  font-weight: 500;
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 3em;
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin-top: 3em;
+  margin-left: 3em;
+  padding: 1em;
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-image: url('./asset/superDoudou.svg');
+  min-height: 95vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  background-size: cover;
+  background-position: bottom;
 }
 
 .App-link {
